manifests/image-build/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: image-build
  labels:
    pod-security.kubernetes.io/enforce: privileged
