manifests/image-build/netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: image-build
  namespace: image-build
spec:
  endpointSelector:
    matchLabels:
      image-build: "true"
  ingressDeny:
    - fromEntities:
        - world
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toFQDNs:
        - matchName: "github.com"
        - matchPattern: "*.githubusercontent.com"
        - matchName: "dl-cdn.alpinelinux.org"
        - matchName: "dl.k8s.io"
        - matchPattern: "*.dl.k8s.io"
        - matchName: "registry.infra.tgy.io"
        - matchName: "gcr.io"
        - matchPattern: "*.gcr.io"
        - matchName: "registry-1.docker.io"
        - matchName: "auth.docker.io"
        - matchName: "production.cloudflare.docker.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: seaweedfs
            app.kubernetes.io/component: filer
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "8333"
              protocol: TCP
